<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="net.example.intents.MainActivity">

    <Button
        android:id="@+id/btn_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_web"/>
    <Button
        android:id="@+id/btn_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_call"/>
    <Button
        android:id="@+id/btn_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_maps"/>
    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_camera"/>
    <Button
        android:id="@+id/btn_send_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_mail"/>
    <Button
        android:id="@+id/btn_web_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_web_search"/>
    <Button
        android:id="@+id/btn_dialer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dialer"/>
    <Button
        android:id="@+id/btn_street_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_street_view"/>
    <Button
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_share"/>
</LinearLayout>
